tests/ui/eii/static/subtype_wrong.stderr
error[E0308]: mismatched types
  --> $DIR/subtype_wrong.rs:14:1
   |
LL | static HELLO_IMPL: for<'a> fn(&'a u8) -> &'a u8 = |_| todo!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a _) -> &'static _`
              found fn pointer `for<'a> fn(&'a _) -> &'a _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
